연속 공격 테스트

--- a/SYAnim/Config/DefaultEngine.ini
+++ b/SYAnim/Config/DefaultEngine.ini
@@ -10,3 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/SYAnim")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/SYAnim")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
+GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
+
